new links and stuff

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <img src="images/pairproj2.webp" alt="PairProj" class="project-img">
                 <div class="project-content">
                     <h3>PairProj</h3>
-                    <p>Working alongside fellow graduates and mentors to launch a startup website poised to be an incubator for the steadily growing entry-level CS market.</p>
+                    <p>Work in Progress.</p>
                 </div>
             </div>
             <div class="project">
-                <img src="images/UnityAssetStore.jpg" alt="Game Dev Asset Sales" class="project-img">
+                <img src="images/UnityAssetStore.jpg" alt="Unity Asset Store Publisher" class="project-img">
                 <div class="project-content">
                     <h3>Unity Asset Store Publisher</h3>
                     <p>After spending months designing my own physics-based character-controller, I decided to publish it on the Unity Asset Store for other devs to use!</p>
@@ -107,7 +107,7 @@
             <img id="details-image" src="" alt="Project Image">
             <p id="details-description">Project description goes here.</p>
             <p><strong>Role:</strong> <span id="details-role">Developer</span></p>
-            <p><strong>Link:</strong> <a href="#" id="details-link" target="_blank">Visit Project</a></p>
+            <p><strong>Link:</strong> <a href="#" id="details-link" target="_blank" rel="noopener noreferrer">Visit Project</a></p>
             <div id="video-container"></div>
         </div>
     </div>
